Create comment entity and add it to the post