@@ -3,6 +3,7 @@ package org.blog.springboot.infrastructure.adapters.outbound.tasks;
 import org.blog.springboot.application.ports.outbound.PostRepository;
 import org.blog.springboot.application.ports.outbound.UserRepository;
 import org.blog.springboot.domain.dto.UserSummary;
+import org.blog.springboot.domain.entities.Comment;
 import org.blog.springboot.domain.entities.Post;
 import org.blog.springboot.domain.entities.User;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,7 +11,7 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Configuration;
 
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class DataInitializer implements CommandLineRunner {
@@ -31,7 +32,7 @@ public class DataInitializer implements CommandLineRunner {
         User u3 = new User(null, "Samuel L. Jackson", "samuel@email.com");
         User u4 = new User(null, "Kurt Russell", "kurt@email.com");
 
-        userRepository.insert(Arrays.asList(u1, u2, u3, u4));
+        userRepository.insert(List.of(u1, u2, u3, u4));
 
         Post p1 = new Post(
                 null,
@@ -48,9 +49,16 @@ public class DataInitializer implements CommandLineRunner {
                 new UserSummary(u3)
         );
 
-        postRepository.insert(Arrays.asList(p1, p2));
+        Comment c1 = new Comment("Yes no yes no yes no yes no", Instant.now(), new UserSummary(u2));
+        Comment c2 = new Comment("Top bottom top bottom top bottom", Instant.now(), new UserSummary(u3));
+        Comment c3 = new Comment("Right left right wrong right left", Instant.now(), new UserSummary(u2));
 
-        u3.setPosts(Arrays.asList(p1, p2));
+        p1.setComments(List.of(c1,c2));
+        p2.setComments(List.of(c3));
+
+        postRepository.insert(List.of(p1, p2));
+
+        u3.setPosts(List.of(p1, p2));
 
         userRepository.save(u3);
     }
